<resources>
    <string name="app_name">login_register_page</string>
    <string name="forgetPw">Forget password?</string>
    <string name="register">Register</string>
    <string name="enter">Enter</string>
    <string name="passord">Password</string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
    <string name="dreamland">DreamLand</string>
    <string name="email">Email</string>

    <string name="confirm_passord">Confirm Password</string>
    <string name="logout" />

    <string name="Composer">Composer</string>
    <string name="composer">Composer</string>
    <string name="violin">Violin</string>
    <string name="rainy">Rainy</string>
    <string name="_25">25%</string>
    <string name="fire">Fire</string>
    <string name="wave">Wave</string>
    <string name="bird">Bird</string>
    <string name="vertical">vertical</string>
    <string name="water_drop">Water drop</string>
    <string name="thunder">Thunder</string>
    <string name="_100">100%</string>
    <string name="_50">50%</string>
    <string name="collect_to_list">Collect to List</string>
    <string name="my_collection">My Collection</string>
    <string name="textname">Name</string>
    <string name="say_something">Say Something</string>

</resources>
